<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Funner Summer</string>
    <string name="title_section_single">Solo</string>
    <string name="title_section_couple">Couple</string>
    <string name="title_section_group">Group</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_pastimes">All activities</string>
    <string name="action_random">Random activities</string>
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="action_pastime_create">Create activity</string>
    <string name="action_pastime_edit">Edit activity</string>
    <string name="action_weather_edit">Update weather</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="at">at</string>
    <string name="yesterday">Yesterday</string>
    <string name="empty">There\'s nothing here</string>
    <string name="loading">Loading &#8230;</string>
    <string name="pastime_do">Let\'s go!</string>
    <string name="pastime_history">Activity history</string>
    <string name="pastime_include">Include in suggestions</string>
    <string name="pastime_empty">You haven\'t done this yet!</string>
    <string name="pastime_recorded">Recorded your activity. Have fun!</string>
    <string name="pastime_manual_prompt">Will you be doing this activity alone, with one other person, or with a group?</string>
    <string name="pastime_search_prompt">Need some help to</string>
    <string name="pastime_progress_title">Please wait &#8230;</string>
    <string name="pastime_progress">Updating your activity history</string>
    <string name="pastime_create">Create</string>
    <string name="pastime_update">Update</string>
    <string name="pastime_prompt">Prompt</string>
    <string name="pastime_prompt_description">Enter a prompt for this activity, such as \"Enjoy a bicycle ride\" or \"Fly a kite.\"</string>
    <string name="pastime_prompt_example">Play freeze tag</string>
    <string name="pastime_name">Name</string>
    <string name="pastime_name_description">Enter a unique name for this activity, such as \"cycling\" for riding a bicycle or \"kite\" for flying a kite. This is used to sort activities.</string>
    <string name="pastime_name_example">tag</string>
    <string name="pastime_edit_error">Cannot save activity because:</string>
    <string name="pastime_edit_error_duplicate_name">Another activity has the same name</string>
    <string name="pastime_edit_error_duplicate_action">Another activity has the same prompt</string>
    <string name="pastime_edit_error_empty_name">Activity name cannot be empty</string>
    <string name="pastime_edit_error_empty_action">Activity prompt cannot be empty</string>
    <string name="weather_condition">Weather</string>
    <string name="weather_clear">☀️ Clear</string>
    <string name="weather_clouds">☁️ Clouds</string>
    <string name="weather_drizzle">🌦️ Drizzle</string>
    <string name="weather_rain">🌧️ Rain</string>
    <string name="weather_thunderstorm">⛈️ Thunderstorm</string>
    <string name="weather_snow">🌨️ Snow</string>
    <string name="weather_atmosphere">🌫️ Fog/haze/sand</string>
    <string name="weather_extreme">🌪️ Extreme</string>
    <string name="weather_temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
</resources>
