<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.seabears.funner.summer.Ideas" >

    <item
        android:id="@+id/action_weather"
        android:orderInCategory="40"
        android:icon="@drawable/ic_action_weather"
        android:showAsAction="ifRoom"
        android:title="@string/action_weather_edit" />

    <item
        android:id="@+id/action_pastime_create"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_pastime_create" />

    <item
        android:id="@+id/action_pastimes"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_pastimes" />

    <item
        android:id="@+id/action_random"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_random" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_history" />
</menu>
